<resources>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about">About</string>
    <string name="about_address">Address: R1202, 12 floor, HITTC Building, 185 Giang Vo Rd, Hanoi</string>
    <string name="about_copyright">© %s Coc Coc Company Limited</string>
    <string name="about_description">Nha Nha application helps you search and explore interesting places in Vietnam such as restaurants, cafe, shops, clubs…</string>
    <string name="about_email">Email: info@coccoc.vn</string>
    <string name="about_phone">Phone: (+84) 435 123 776</string>
    <string name="about_version">Version: %s</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Setting</string>
    <string name="add_new_place">ADD NEW PLACE</string>
    <string name="add_photo">Add photo</string>
    <string name="add_place_error">Can not add your business</string>
    <string name="add_place_susscess">Your place will be added after review</string>
    <string name="add_poi_gps_1"><u>Turn on GPS</u></string>
    <string name="add_poi_gps_2">, if you want to make photo now</string>
    <string name="address_add_poi">Address*</string>
    <string name="album_name">NhaNha Photo</string>
    <string name="app_hash">a36a0b658cd2eb98b30dd434485e3c28</string>
    <string name="app_name">Nha Nha</string>
    <string name="app_name_uc">NHA NHA</string>
    <string name="app_require_restart">The application has encountered a problem and needs to be restarted. We are sorry for the inconvenience.</string>
    <string name="app_secret">f74758c74c0ce7a4ae46bb7e3ea54fd0</string>
    <string name="back">&lt; Back</string>
    <string name="cancel">Cancel</string>
    <string name="car">Car</string>
    <string name="categories_uc">CATEGORIES</string>
    <string name="category">Category</string>
    <string name="category_atm">ATM</string>
    <string name="category_cafe">Cafe</string>
    <string name="category_health">Health</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_petrol">Petrol</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_shoping">Shopping</string>
    <string name="category_spa">Spa</string>
    <string name="category_street_food">Street Food</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_location_city">CITY</string>
    <string name="city_add_poi">City*</string>
    <string name="close">Close</string>
    <string name="close_uc">CLOSE</string>
    <string name="com.crashlytics.android.build_id">c22e076c-32e2-4e5d-9a4f-4232cfb569be</string>
    <string name="com.itim.explorer.ui.AboutActivity">About</string>
    <string name="com.itim.explorer.ui.AddPOIActivity">Add POI</string>
    <string name="com.itim.explorer.ui.ChooseLocationActivity">Choose Location</string>
    <string name="com.itim.explorer.ui.DirectionActivity">Direction</string>
    <string name="com.itim.explorer.ui.MainActivity">Main</string>
    <string name="com.itim.explorer.ui.MapActivity">Map</string>
    <string name="com.itim.explorer.ui.MapNavigationActivity">Map Navigation</string>
    <string name="com.itim.explorer.ui.POIDetailActivity">POI Detail</string>
    <string name="com.itim.explorer.ui.POIPictureActivity">POI picture</string>
    <string name="com.itim.explorer.ui.ReviewActivity">Review</string>
    <string name="com.itim.explorer.ui.SplashActivity">Splash</string>
    <string name="com.itim.explorer.ui.UserPOIsActivity">List of User POIs</string>
    <string name="com.itim.explorer.ui.ViewUsersPOIActivity">View users POI</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="details">Details</string>
    <string name="dialog_dont_show">"Don't show again"</string>
    <string name="dialog_gps_notify_content">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="dialog_gps_notify_title">Improve location accuracy</string>
    <string name="dismiss">Dismiss</string>
    <string name="drawer_select_city">City:</string>
    <string name="feed_back_str">Do you like Nha Nha app?</string>
    <string name="hint_add_poi">* Please add a place, which is a business and provides some service, not private nor personal places. Its photo must contain a signboard.</string>
    <string name="hint_drop_pin">Tap the map to drop a pin</string>
    <string name="later">Later</string>
    <string name="location">Location</string>
    <string name="no">No</string>
    <string name="phone">Phone</string>
    <string name="report">Report</string>
    <string name="report_problem">REPORT PROBLEM</string>
    <string name="review">Review</string>
    <string name="review_post">Post</string>
    <string name="review_post_to_facebook">Post to your Facebook timeline</string>
    <string name="review_your_comment">Your comment</string>
    <string name="rp_changed">Changed</string>
    <string name="rp_closed">Closed</string>
    <string name="rp_doesnt_exist">"Doesn't exist"</string>
    <string name="rp_duplicate">Duplicate</string>
    <string name="rp_misspelled">Misspelled</string>
    <string name="rp_other">Other</string>
    <string name="save_place">SAVE PLACE</string>
    <string name="title_add_poi">Title*</string>
    <string name="website">Website</string>
    <string name="yes">Yes</string>
</resources>