<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:padding="@dimen/content_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:paddingTop="@dimen/element_padding_normal" android:paddingBottom="@dimen/content_padding_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_launcher" />
        <TextView android:textSize="@dimen/text_size_xlarge" android:textColor="@color/body_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:shadowColor="@color/body_text_3" android:shadowDx="2.0" android:shadowDy="1.0" android:shadowRadius="2.0" />
        <TextView android:textStyle="italic" android:textColor="@color/body_text_1" android:id="@id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version" />
        <TextView android:textColor="@color/body_text_1" android:gravity="center_horizontal" android:paddingTop="@dimen/element_spacing_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_description" />
        <TextView android:textColor="@color/body_text_1" android:paddingTop="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_email" />
        <TextView android:textColor="@color/body_text_1" android:paddingTop="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_phone" />
        <TextView android:textColor="@color/body_text_1" android:gravity="center" android:paddingTop="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_address" />
        <TextView android:textColor="@color/body_text_1" android:gravity="center_horizontal" android:id="@id/tv_copyright" android:paddingTop="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_copyright" />
    </LinearLayout>
</ScrollView>