<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/content_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/body_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/details" />
                <TextView android:textSize="@dimen/text_size_small" android:textStyle="italic" android:textColor="@color/body_text_1" android:gravity="right" android:layout_gravity="bottom|right|center" android:id="@id/tv_time_add_poi" android:paddingLeft="@dimen/content_padding_normal" android:paddingRight="@dimen/content_padding_normal" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:id="@id/tv_hint_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hint_add_poi" style="@style/TextViewRedHint" />
            <EditText android:id="@id/et_title_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/title_add_poi" android:singleLine="true" style="@style/TextViewAddPOI" />
            <EditText android:id="@id/et_phone_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/phone" android:singleLine="true" android:inputType="phone" style="@style/TextViewAddPOI" />
            <EditText android:id="@id/et_website_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/website" android:singleLine="true" android:inputType="textUri" style="@style/TextViewAddPOI" />
            <TextView android:id="@id/et_category_add_poi" android:background="@drawable/bg_spinner" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/category" android:singleLine="true" android:onClick="onClick" style="@style/TextViewAddPOI" />
            <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/body_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_padding_normal" android:text="@string/location" />
            <EditText android:id="@id/et_address_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/address_add_poi" style="@style/TextViewAddPOI" />
            <TextView android:id="@id/et_city_add_poi" android:background="@drawable/bg_spinner" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:hint="@string/drawer_select_city" android:singleLine="true" android:onClick="onClick" style="@style/TextViewAddPOI" />
            <RelativeLayout android:id="@id/rl_map_add_poi" android:background="@drawable/textview_bg" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/map_poi_size" android:layout_marginTop="@dimen/element_spacing_normal">
                <fragment android:id="@id/googleMap_add_poi" android:layout_width="fill_parent" android:layout_height="@dimen/map_poi_size" class="com.google.android.gms.maps.SupportMapFragment" />
                <View android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <TextView android:id="@id/tv_hint_map_add_poi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hint_drop_pin" style="@style/TextViewMapHint" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/l_photo_add_poi" android:background="@drawable/btn_bg" android:paddingTop="@dimen/element_spacing_normal" android:paddingBottom="@dimen/element_spacing_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal">
                <ImageView android:id="@id/imv_photo_add_poi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sample_image" android:scaleType="fitStart" android:layout_centerInParent="true" />
                <LinearLayout android:orientation="horizontal" android:id="@id/ll_take_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
                    <ImageButton android:id="@id/btn_take_photo_add_poi" android:background="@drawable/btn_bg" android:padding="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/element_spacing_normal" android:src="@drawable/ic_camera" android:onClick="onClick" />
                    <ImageButton android:id="@id/btn_add_photo_gallery_add_poi" android:background="@drawable/btn_bg" android:padding="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/element_spacing_normal" android:src="@drawable/ic_picture" android:onClick="onClick" />
                </LinearLayout>
                <ImageButton android:id="@id/ibtn_clear_photo_add_poi" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close_add_poi" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="onClick" />
                <ImageButton android:id="@id/ibtn_rotate_left_add_poi" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_rotate_left" android:layout_below="@id/ibtn_clear_photo_add_poi" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onClick" />
                <ImageButton android:id="@id/ibtn_rotate_right_add_poi" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_rotate_left" android:layout_below="@id/ibtn_clear_photo_add_poi" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="onClick" android:scaleX="-1.0" />
            </RelativeLayout>
            <Button android:textSize="@dimen/text_size_medium" android:textStyle="bold" android:textColor="@color/body_text_1" android:id="@id/btn_save_add_poi" android:background="@drawable/btn_yellow_bg" android:paddingTop="@dimen/content_padding_normal" android:paddingBottom="@dimen/content_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_padding_normal" android:text="@string/save_place" android:onClick="onClick" />
        </LinearLayout>
    </ScrollView>
    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar android:id="@id/pgb_load_add_poi" android:background="#ffffffff" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="4.0dip" android:indeterminate="true" app:spb_color="@color/green_base_1_light" app:spb_stroke_width="4.0dip" app:spb_stroke_separator_length="4.0dip" app:spb_sections_count="5" app:spb_speed="0.8" app:spb_reversed="false" app:spb_mirror_mode="false" />
</RelativeLayout>