<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/list_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_xlarge" android:textColor="@color/body_text_1_inverse" android:id="@id/tv_title_list_poi_dialog" android:paddingLeft="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/review" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <RatingBar android:id="@id/rb_star_dialog_rate" android:paddingTop="@dimen/element_spacing_normal" android:paddingBottom="@dimen/element_spacing_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/element_spacing_normal" android:max="5" android:numStars="5" android:stepSize="0.5" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/RatingBarBig" />
    </RelativeLayout>
    <View android:background="@drawable/ab_bg" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:gravity="top" android:id="@id/edt_comment_dialog_rate" android:background="@drawable/btn_bg_normal_s" android:paddingLeft="@dimen/element_padding_normal" android:paddingTop="@dimen/element_padding_normal" android:paddingRight="@dimen/element_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/element_spacing_normal" android:hint="@string/review_your_comment" android:lines="5" android:ems="10" />
        <CheckBox android:textColor="@color/body_text_1" android:id="@id/cb_post_to_facebook" android:paddingTop="@dimen/element_padding_normal" android:paddingRight="@dimen/element_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/review_post_to_facebook" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <Button android:textColor="@color/body_text_1" android:id="@id/btn_rate_ok" android:background="@drawable/btn_bg" android:paddingTop="@dimen/element_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/element_spacing_normal" android:layout_marginRight="@dimen/element_padding_normal" android:layout_marginBottom="@dimen/element_spacing_normal" android:text="@string/review_post" android:layout_weight="1.0" />
            <Button android:textColor="@color/body_text_1" android:id="@id/btn_rate_cancel" android:background="@drawable/btn_bg" android:paddingTop="@dimen/element_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/element_padding_normal" android:layout_marginRight="@dimen/element_spacing_normal" android:layout_marginBottom="@dimen/element_spacing_normal" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>