<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/drawer_child_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_size_medium" android:id="@id/tv_title_report_dialog" android:background="@color/list_bg" android:paddingLeft="@dimen/element_spacing_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/feed_back_str" android:drawablePadding="@dimen/element_spacing_normal" style="@style/DrawerList" />
    <View android:background="@drawable/ab_bg" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/element_spacing_normal" android:layout_marginBottom="@dimen/element_spacing_normal">
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@color/body_text_1" android:id="@id/btn_yes_feedback" android:background="@drawable/btn_bg" android:paddingLeft="@dimen/content_padding_normal" android:paddingTop="@dimen/element_padding_normal" android:paddingRight="@dimen/content_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/element_spacing_normal" android:text="@string/yes" android:layout_weight="1.0" android:onClick="onNotInList" />
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@color/body_text_1" android:id="@id/btn_no_feedback" android:background="@drawable/btn_bg" android:paddingLeft="@dimen/content_padding_normal" android:paddingTop="@dimen/element_padding_normal" android:paddingRight="@dimen/content_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/element_padding_normal" android:layout_marginRight="@dimen/element_padding_normal" android:text="@string/no" android:layout_weight="1.0" android:onClick="onNotInList" />
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@color/body_text_1" android:id="@id/btn_later_feedback" android:background="@drawable/btn_bg" android:paddingLeft="@dimen/content_padding_normal" android:paddingTop="@dimen/element_padding_normal" android:paddingRight="@dimen/content_padding_normal" android:paddingBottom="@dimen/element_padding_normal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/element_spacing_normal" android:text="@string/later" android:layout_weight="1.0" android:onClick="onNotInList" />
    </LinearLayout>
</LinearLayout>